# dronekit-python

./: pyproject.toml  requirements.txt  setup.py
dronekit/: __init__.py  mavlink.py
dronekit/test/: __init__.py
dronekit/test/sitl/: __init__.py  test_110.py  test_115.py  test_12.py  test_capability_and_version.py  test_channels.py  test_earlyattrs.py  test_errprinter.py  test_goto.py  test_locations.py  test_mode_settings.py  test_parameters.py  test_reboot.py  test_simpledemo.py  test_state.py  test_timeout.py  test_waypoints.py
dronekit/test/unit/: test_api.py
examples/avoidance/: README.md  avoidance-manytests.py  avoidance.py  mavlink_hub.py
examples/channel_overrides/: channel_overrides.py
examples/create_attribute/: my_vehicle.py
examples/multivehicle/: README.md  mavlink_hub.py  multivehicle.py
examples/rc_override_flight/: rc_override_flight.py
