# pyproject.toml
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dronekit"
version = "2.9.3"
description = "Developer Tools for Drones."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.7"
license = { text = "Apache-2.0" }

authors = [
  { name = "3D Robotics", email = "tim@3drobotics.com" },
  { name = "Kevin H",   email = "kevinh@geeksville.com" }
]

dependencies = [
  "monotonic>=1.3",
  "pymavlink @ git+https://github.com/gartfeo/mavlink.git#egg=pymavlink&subdirectory=pymavlink"
]

[project.urls]
Homepage = "https://github.com/dronekit/dronekit-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
